--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.14.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
