--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.3.1",
     "prettier": "^1.14.2"
   },
   "repository": {
